--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,58 +2,6 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: Hampton by Hilton Frankfurt City Centre East
-  id: hampton-by-hilton-frankfurt-city-centre-east
-  location: Hampton by Hilton Frankfurt City Centre East, Frankfurt am Main, Hessen, Deutschland
-  description: Aufregender Sightseeing-Trip nach Mainhattan – inkl. Frühstück, spätem Check-out &amp; Extras
-  price: 65
-  price-description: pro Zimmer pro Nacht
-  saved: 43
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/75580/6256071d_ca14_4551_b56e_932a1fad241d.jpg
-  link: https://www.secretescapes.de/city-trip-in-frankfurts-szeneviertel-ostend-hampton-by-hilton-frankfurt-city-centre-east-frankfurt-am-main-hessen-deutschland/sale
-  sale-id: 94700
-  domestic: true
-
-- title: Romantische Momente am Niederrhein
-  id: romantische-momente-am-niederrhein
-  location: Wellings Romantik Hotel zur Linde, Moers, Nordrhein-Westfalen, Deutschland
-  description: Inkl. Frühstücksbuffet, optionalem Dinner, Sauna-Nutzung, 1x Aperitiv &amp; weiteren Extras
-  price: 100
-  price-description: pro Zimmer pro Nacht
-  saved: 52
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/45531/0e664862_570d_4807_a995_e6badcbaa9d7.jpg
-  link: https://www.secretescapes.de/genuss-and-wellness-im-romantikhotel-wellings-romantik-hotel-zur-linde-moers-nordrhein-westfalen-deutschland-de/sale
-  sale-id: 94751
-  domestic: true
-
-- title: Komfort an der Messe Köln
-  id: komfort-an-der-messe-köln
-  location: Dorint An der Messe Köln, Nordrhein-Westfalen, Deutschland
-  description: Superior-Zimmer – inkl. Frühstückbuffet, 1 Flasche Wasser &amp; WLAN-Nutzung
-  price: 99
-  price-description: pro Zimmer pro Nacht
-  saved: 53
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/46330/0a201f64_53a0_4e00_8f0b_f6be566d710d.jpg
-  link: https://www.secretescapes.de/komfort-an-der-messe-koln-dorint-an-der-messe-koln-nordrhein-westfalen-deutschland/sale
-  sale-id: 95009
-  domestic: true
-
-- title: Ostseeurlaub in der Hansestadt Rostock
-  id: ostseeurlaub-in-der-hansestadt-rostock
-  location: pentahotel Rostock, Ostsee, Mecklenburg-Vorpommern, Deutschland
-  description: Vom Star-Architekten Matteo Thun designtes Hotel – inkl. Frühstück &amp; spätem Check-out
-  price: 122
-  price-description: pro Zimmer pro Nacht
-  saved: 46
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/52993/dd712ef9_8b7c_4e7b_bcc5_2085d13661cc.jpg
-  link: https://www.secretescapes.de/ostseeurlaub-in-der-hansestadt-rostock-pentahotel-rostock-ostsee-mecklenburg-vorpommern-deutschland/sale
-  sale-id: 94894
-  domestic: true
-
 - title: "Einmalig: im Hamburger Sternschanzenpark"
   id: einmalig:-im-hamburger-sternschanzenpark
   location: Mövenpick Hamburg, Deutschland
@@ -61,7 +9,7 @@
   price: 120
   price-description: pro Zimmer pro Nacht
   saved: 39
-  expires: 2019/06/12
+  expires: 2019/06/15
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/6543/bed2264f_5182_4b32_8863_0096d033524e.jpg
   link: https://www.secretescapes.de/einmalig-im-hamburger-sternschanzenpark-movenpick-hamburg-deutschland/sale
   sale-id: 94757
@@ -74,36 +22,10 @@
   price: 169
   price-description: pro Zimmer pro Nacht
   saved: 37
-  expires: 2019/06/12
+  expires: 2019/06/15
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/49514/c94c5011_e079_4149_90e8_5a62cbe74340.jpg
   link: https://www.secretescapes.de/familiengefuehrte-ruheoase-am-fleesensee-fleesensee-resort-and-spa-untergohren-mecklenburg-vorpommern-deutschland/sale
   sale-id: 94963
-  domestic: true
-
-- title: Berliner Sommertage mit Blick auf die Spree
-  id: berliner-sommertage-mit-blick-auf-die-spree
-  location: Abion Villa Boutique Hotel, Berlin, Deutschland
-  description: Luxus-Boutiquehotel zwischen Hauptbahnhof &amp; Tiergarten – inkl. Frühstück &amp; 1 Flasche Sekt
-  price: 138
-  price-description: pro Unterkunft pro Nacht
-  saved: 39
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/65118/c154f50a_497d_42dc_9618_ad30882f2c2a.jpg
-  link: https://www.secretescapes.de/berliner-sommertage-mit-blick-auf-die-spree-abion-villa-boutique-hotel-berlin-deutschland/sale
-  sale-id: 95459
-  domestic: true
-
-- title: Renaissance-Schloss inmitten traumhafter Natur
-  id: renaissance-schloss-inmitten-traumhafter-natur
-  location: Hotel Jagdschloss Kranichstein, Darmstadt, Hessen, Deutschland
-  description: Inkl. Frühstücksbuffet, Begrüßungsgetränk, spätem Check-out &amp; Parkplatz
-  price: 114
-  price-description: pro Zimmer pro Nacht
-  saved: 55
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/23257/93a67b15_0ea4_481c_82f6_9cfae0e99be0.jpg
-  link: https://www.secretescapes.de/renaissance-schloss-inmitten-traumhafter-natur-hotel-jagdschloss-kranichstein-darmstadt-hessen-deutschland-de/sale
-  sale-id: 95150
   domestic: true
 
 - title: Gräflicher Park Health & Balance Resort
@@ -113,7 +35,7 @@
   price: 229
   price-description: pro Zimmer pro Nacht
   saved: 35
-  expires: 2019/06/12
+  expires: 2019/06/15
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/27804/66697f90_b0ba_4eef_95f5_9b21fd1c5db0.jpg
   link: https://www.secretescapes.de/graflicher-park-grand-resort-bad-driburg-nordrhein-westfalen-deutschland/sale
   sale-id: 95115
@@ -126,7 +48,7 @@
   price: 169
   price-description: pro Unterkunft pro Nacht
   saved: 48
-  expires: 2019/06/12
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/42673/8f084a44_fc4a_41bd_b0cb_db5494ff4bba.jpg
   link: https://www.secretescapes.de/park-hyatt-hamburg-park-hyatt-hamburg-deutschland/sale
   sale-id: 95291
@@ -139,7 +61,7 @@
   price: 159
   price-description: pro Appartement pro Nacht
   saved: 46
-  expires: 2019/06/12
+  expires: 2019/06/15
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95315/028afa59_ec20_4489_9479_ef09253a9f1b.jpg
   link: https://www.secretescapes.de/neueroffnung-energie-tanken-mit-seeblick-maremueritz-yachthafen-resort-and-spa-waren-mueritz-mecklenburgische-seenplatte-mecklenburg-vorpommern-deutschland/sale
   sale-id: 95315
@@ -156,19 +78,6 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95873/28cab609_fa13_4276_b533_169aa3d3a0db.jpg
   link: https://www.secretescapes.de/boutique-charme-auf-st-pauli-east-hamburg-deutschland/sale
   sale-id: 95873
-  domestic: true
-
-- title: Kulturreise mit Elphi-Besuch in Hamburg
-  id: kulturreise-mit-elphi-besuch-in-hamburg
-  location: Le Méridien Hamburg oder Renaissance Hamburg Hotel, Deutschland
-  description: Klassische Klänge in Hamburg – inkl. Frühstück &amp; Tickets für die Elbphilharmonie
-  price: 424
-  price-description: pro Person für 2 Nächte
-  saved: 31
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/89858/f6d8a1e6_7f88_49ec_9084_0ca5125cb3e0.jpg
-  link: https://www.secretescapes.de/kulturreise-mit-elphi-besuch-in-hamburg-le-meridien-hamburg-oder-renaissance-hamburg-hotel-deutschland/sale
-  sale-id: 95190
   domestic: true
 
 - title: Sylter Insel-Idylle in Sommerlaune
@@ -249,19 +158,6 @@
   sale-id: 95825
   domestic: true
 
-- title: Hauptstadtfieber in Friedrichshain
-  id: hauptstadtfieber-in-friedrichshain
-  location: New Berlin, Deutschland
-  description: Moderner Lifestyle im Schatten des Fernsehturms – inkl. Frühstück &amp; spätem Check-out
-  price: 88
-  price-description: pro Zimmer pro Nacht
-  saved: 47
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95093/4ecfab7c_e1ed_43f0_b3cd_20c76f5854ff.jpg
-  link: https://www.secretescapes.de/hauptstadtfieber-in-friedrichshain-new-berlin-deutschland/sale
-  sale-id: 95093
-  domestic: true
-
 - title: Steigenberger Hotel Berlin
   id: steigenberger-hotel-berlin
   location: Steigenberger Hotel Berlin, Deutschland
@@ -273,19 +169,6 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/44455/3119905c_b5bf_4ca2_aa51_63f9fd750d5a.jpg
   link: https://www.secretescapes.de/steigenberger-hotel-berlin-steigenberger-hotel-berlin-deutschland/sale
   sale-id: 95594
-  domestic: true
-
-- title: "Neueröffnung: Konnichiwa Berlin"
-  id: neueröffnung:-konnichiwa-berlin
-  location: Hotel Gaijin, Berlin, Deutschland
-  description: "Seien Sie die ersten Gäste: Fernost-Flair mitten in Berlin – inkl. Frühstück &amp; Begrüßungsgetränk"
-  price: 110
-  price-description: pro Unterkunft pro Nacht
-  saved: 35
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95094/233b8132_c73e_41e1_aea6_134ac65628e4.jpg
-  link: https://www.secretescapes.de/konnichiwa-berlin-japan-trifft-deutschland-hotel-gaijin-tempelhof-schoneberg-berlin-deutschland/sale
-  sale-id: 95094
   domestic: true
 
 - title: Sightseeing in der Mainmetropole Frankfurt
@@ -325,7 +208,7 @@
   price: 238
   price-description: pro Zimmer pro Nacht
   saved: 35
-  expires: 2019/06/12
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/50746/ad2c4f83_f8ba_4f22_a83e_32820a21ce15.jpg
   link: https://www.secretescapes.de/hochglanz-tage-in-tirol-nidum-casual-luxury-hotel-mosern-tirol-osterreich/sale
   sale-id: 95174
@@ -338,36 +221,10 @@
   price: 299
   price-description: pro Zimmer pro Nacht
   saved: 36
-  expires: 2019/06/12
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/77310/c4095a53_f73d_4c34_a7d2_fc9911481435.jpg
   link: https://www.secretescapes.de/auf-aktiver-entdeckungstour-in-tirol-das-kronthaler-achenkirch-tirol-osterreich-de/sale
   sale-id: 94977
-  domestic: false
-
-- title: Modernes Designhotel in Wiener Szeneviertel
-  id: modernes-designhotel-in-wiener-szeneviertel
-  location: Ruby Marie Hotel, Wien, Österreich
-  description: Hippes Hotel in der historischen Kulturstadt – inkl. Frühstücksbuffet &amp; WLAN-Nutzung
-  price: 98
-  price-description: pro Zimmer pro Nacht
-  saved: 45
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/39291/ad3a28d2_bb4d_4df9_8241_11121e648729.jpg
-  link: https://www.secretescapes.de/modernes-designhotel-in-wiener-szeneviertel-ruby-marie-hotel-wien-osterreich/sale
-  sale-id: 94906
-  domestic: false
-
-- title: Aktive Rundum-Erholung in Kärnten
-  id: aktive-rundum-erholung-in-kärnten
-  location: Hotel Katschberghof, Rennweg am Katschberg, Kärnten, Österreich
-  description: Wohlfühlen in bezaubernder Kulisse – inkl. 3/4-Wohlfühlpension, Begrüßungsgetränk &amp; Extras
-  price: 149
-  price-description: pro Unterkunft pro Nacht
-  saved: 50
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/52768/019a1776_a61c_417d_bbbd_4903a8c4884c.jpg
-  link: https://www.secretescapes.de/aktive-rundum-erholung-in-kaernten-hotel-katschberghof-rennweg-am-katschberg-kaernten-osterreich/sale
-  sale-id: 94997
   domestic: false
 
 - title: Urbanes Spa-Refugium auf Mallorca
@@ -416,7 +273,7 @@
   price: 235
   price-description: pro Zimmer pro Nacht
   saved: 22
-  expires: 2019/06/12
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/35749/371f70a4_68ae_4ff2_83ce_8a8bf1fedb6f.jpg
   link: https://www.secretescapes.de/wellnessoase-im-salzburger-land-alpin-life-resort-hotel-luerzerhof-untertauern-salzburger-land-osterreich/sale
   sale-id: 95293
@@ -429,7 +286,7 @@
   price: 79
   price-description: pro Zimmer pro Nacht
   saved: 55
-  expires: 2019/06/12
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92028/77021688_a79f_4d00_b5e4_ba531007915d.jpg
   link: https://www.secretescapes.de/nachhaltiges-alpenflair-in-tirol-tirol-lodge-ellmau-tirol-osterreich1/sale
   sale-id: 95333
@@ -439,10 +296,10 @@
   id: auszeit-in-den-tiroler-bergen-bei-ischgl
   location: Appartments Dorfstadl, Kappl, Tirol, Österreich
   description: Inkl. Frühstück, Wellness-Zugang, Wanderjause, Garagenstellplatz &amp; Extras
-  price: 284
+  price: 278
   price-description: pro Apartment pro Nacht
   saved: 47
-  expires: 2019/06/12
+  expires: 2019/06/15
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/50874/d58c0054_3681_49e3_b78e_c02433400200.jpg
   link: https://www.secretescapes.de/auszeit-in-den-tiroler-bergen-bei-ischgl-appartments-dorfstadl-kappl-tirol-osterreich/sale
   sale-id: 95206
@@ -455,23 +312,10 @@
   price: 79
   price-description: pro Zimmer pro Nacht
   saved: 59
-  expires: 2019/06/12
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92144/39f81c30_efc2_4ba8_8c69_f94144096651.jpg
   link: https://www.secretescapes.de/hotel-schani-wien-wien-osterreich/sale
   sale-id: 95285
-  domestic: false
-
-- title: Entspannung über den Dächern von Zürich
-  id: entspannung-über-den-dächern-von-zürich
-  location: Sorell Hotel Rigiblick, Zürich, Schweiz
-  description: Zwischen Naturidylle und Züricher City – inkl. Frühstück, privatem Wellness-Zugang &amp; Extras
-  price: 376
-  price-description: pro Suite pro Nacht
-  saved: 27
-  expires: 2019/06/12
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95417/d20718e4_907a_4dbc_a9c4_8ba1f8ec47b1.jpg
-  link: https://www.secretescapes.de/entspannung-ueber-den-daechern-von-zuerich-sorell-hotel-rigiblick-zuerich-schweiz/sale
-  sale-id: 95417
   domestic: false
 
 - title: Golfgenuss an der Algarve
@@ -533,7 +377,7 @@
   price: 169
   price-description: pro Unterkunft pro Nacht
   saved: 49
-  expires: 2019/06/12
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/46238/916a8168_2373_4d91_969c_a2827d562547.jpg
   link: https://www.secretescapes.de/wellnessauszeit-in-den-vorarlberger-alpen-sporthotel-silvretta-montafon-gaschurn-vorarlberg-osterreich/sale
   sale-id: 95338
@@ -542,7 +386,7 @@
 - title: Privater Luxus in den Salzburger Bergen
   id: privater-luxus-in-den-salzburger-bergen
   location: Avenida Mountain Lodges Saalbach, Salzburger Land, Österreich
-  description: Inkl. Frühstück, 1 Flasche Sekt, Wellness-Zugang, <i>Joker Card </i>&amp; Extras<i><br></i>
+  description: Inkl. Frühstück, 1 Flasche Sekt, Wellness-Zugang, Joker Card &amp; Extras
   price: 119
   price-description: pro Suite pro Nacht
   saved: 63
@@ -572,7 +416,7 @@
   price: 258
   price-description: pro Zimmer pro Nacht
   saved: 38
-  expires: 2019/06/12
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95828/2dfc1b35_02e6_4f9b_8652_06ce8cedc7dd.jpg
   link: https://www.secretescapes.de/almenrausch-im-bezaubernden-berwanger-tal-singer-sporthotel-spa-berwang-tirol-osterreich/sale
   sale-id: 95828
@@ -657,7 +501,7 @@
   domestic: false
 
 - title: "Sevilla: Buntes Boutiquehotel in der Altstadt"
-  id: sevilla-buntes-boutiquehotel-in-der-altstadt
+  id: sevilla:-buntes-boutiquehotel-in-der-altstadt
   location: Lobby Room Sevilla, Spanien
   description: Sommerlicher Citytrip – inkl. Frühstück, 1 Flasche Cava &amp; Süßigkeiten
   price: 120
@@ -667,18 +511,6 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95966/e5d76351_a98e_48c8_bed8_ae756dfcf60c.jpg
   link: https://www.secretescapes.de/sevilla-buntes-boutiquehotel-in-der-altstadt-lobby-room-sevilla-spanien/sale
   sale-id: 95966
-  domestic: false
-
-- title: 5*-Boutiquehotel nahe Oxford Street
-  location: The Mandrake, London, England, Großbritannien
-  description: Märchenhaftes Design in bester Londoner Lage – inkl. English Breakfast
-  price: 124
-  price-description: pro Person. basierend auf 2 Personen pro Zimmer pro Nacht
-  saved: 51
-  expires: 2019/06/13
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/74357/3ecb266e_3153_44c7_a190_3b40a4a3f8e8.jpg?auto=format,compress
-  link: https://www.secretescapes.de/5-star-boutiquehotel-nahe-oxford-street-the-mandrake-london-england-grossbritannien-2/sale
-  sale-id: 94946
   domestic: false
 
 - title: Modernes Ambiente nahe der Las Ramblas
@@ -705,4 +537,16 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/64357/fd69d8b8_4cf3_44fe_93e1_97006f72d151.jpg
   link: https://www.secretescapes.de/skandinavien-chic-in-stockholm-elite-hotel-carolina-tower-stockholm-schweden-1/sale
   sale-id: 95634
+  domestic: false
+
+- title: 5*-Boutiquehotel nahe Oxford Street
+  location: The Mandrake, London, England, Großbritannien
+  description: Märchenhaftes Design in bester Londoner Lage – inkl. English Breakfast
+  price: 112
+  price-description: pro Person. basierend auf 2 Personen pro Zimmer pro Nacht
+  saved: 56
+  expires: 2019/06/14
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/74357/9a350dd0_6245_44d8_90a4_8ae1149387d4.jpg?auto=format,compress
+  link: https://www.secretescapes.de/5-star-boutiquehotel-nahe-oxford-street-the-mandrake-london-england-grossbritannien-2/sale
+  sale-id: 94946
   domestic: false
